# SAEDashboard

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  dfa_tests.ipynb  feature.json  neuronpedia_vector_pipeline_demo.ipynb  pyproject.toml  sae_dashboard_demo.ipynb  sae_dashboard_demo_mistral.ipynb  test_vector_pipeline.ipynb
.github/workflows/: ci.yaml
docker/: docker-hub.yaml
notebooks/: experiment_gemma_2_9b_dashboard_generation_np.py  sae_dashboard_demo_gemma_2_9b.ipynb
sae_dashboard/: __init__.py  clt_layer_wrapper.py  components.py  components_config.py  data_parsing_fns.py  data_writing_fns.py  dfa_calculator.py  feature_data.py  feature_data_generator.py  hook_utils.py  html_fns.py  huggingface_model_wrapper.py  layout.py  sae_vis_data.py  sae_vis_runner.py  sequence_data_generator.py  transformer_lens_wrapper.py  utils_fns.py  vector_data_generator.py  vector_vis_data.py  vector_vis_runner.py
sae_dashboard/neuronpedia/: generating_neuronpedia_outputs.ipynb  make_batch.py  neuronpedia.py  neuronpedia_converter.py  neuronpedia_dashboard.py  neuronpedia_export.py  neuronpedia_feature.py  neuronpedia_runner.py  neuronpedia_runner_config.py  neuronpedia_vector_runner.py  vector_set.py
sae_vis/: __init__.py  autoencoder.py  components.py  components_config.py  config.py  data_fetching_fns.py  data_parsing_fns.py  data_storing_fns.py  data_writing_fns.py  feature_data.py  feature_data_generator.py  html_fns.py  layout.py  model_fns.py  sae_vis_data.py  sae_vis_runner.py  sequence_data_generator.py  transformer_lens_wrapper.py  utils_fns.py
scripts/: example_vec_dashboards_with_thresholds_and_chat.py  generate_clt_dashboards_test.py  generate_dashboards_test.py  generate_dashboards_test_temporal.py  generate_skip_transcoder_dashboards_test.py  generate_transcoder_dashboards_test.py  rename_neuronpedia_export_model.py  run_dashboards.sh  run_dashboards_runpod.py  test.py  test_transcoder_minimal.py
test_outputs/gpt2_blocks.7.hook_resid_pre/: batch-0.json  run_settings.json
test_vectors/: logistic_direction.json  logistic_direction_vector_set.json
tests/: conftest.py  helpers.py  test_data_storing_fns.py
tests/acceptance/: test_neuronpedia_runner.py  test_neuronpedia_runner_output.py
tests/acceptance/test_converter/: batch-0.json
tests/acceptance/test_disable_concat/: batch-0.json
tests/acceptance/test_eos_separator/: batch-0.json
tests/acceptance/test_no_separator/: batch-0.json
tests/acceptance/test_simple/: batch-0.json  batch-1.json  skipped_indexes.json
tests/benchmark/: test_benchmark_sae_vis_runner.py
tests/fixtures/test_SaeVisData_save_html_snapshot[default]/: feature_centric_vis.html
tests/fixtures/test_SaeVisData_save_json_snapshot[default]/: feature_data.json
tests/integration/: test_huggingface_integration.py  test_sae_vis_integration.py  test_transcoder_integration.py
tests/unit/: test_clt_runner.py  test_dfa_calculator.py  test_feature_mask_context.py  test_huggingface_wrapper.py  test_neuronpedia_runner.py  test_sae_vis_runner.py  test_sequence_data_generator.py  test_transcoder_runner.py  test_transformer_lens_wrapper.py  test_util_fns.py
tests/unit/__snapshots__/: test_sae_vis_runner.ambr
