[tool.poetry]
name = "sae-dashboard"
version = "0.6.4"
description = "Open-source SAE visualizer, based on Anthropic's published visualizer. Forked / Detached from sae_vis."
authors = ["Callum McDougall <cal.s.mcdougall@gmail.com>", "Joseph Bloom, <jbloomaus@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.0.0"
einops = "^0.7.0"
datasets = "^2.0.0"
dataclasses-json = "^0.6.4"
jaxtyping = "^0.2.28"
transformer-lens = "^2.2.0,<3.0.0"
eindex-callum = "^0.1.0"
rich = "^13.7.1"
matplotlib = "^3.8.4"
safetensors = "^0.4.3"
typer = "^0.12.3"
sae-lens = ">=4.0.0"
isort = "^5.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"
pytest = "^8.1.1"
ipykernel = "^6.29.4"
pyright = "^1.1.359"
pytest-profiling = "^1.7.0"
memray = "^1.12.0"
syrupy = "^4.6.1"
flake8 = "^7.0.0"
pytest-cov = "^5.0.0"
black = "^24.4.2"

[tool.poetry.scripts]
neuronpedia-runner = "sae_dashboard.neuronpedia.neuronpedia_runner:main"

[tool.isort]
profile = "black"
src_paths = ["sae_dashboard", "tests"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownArgumentType = "none"
reportUnknownVariableType = "none"
reportUntypedFunctionDecorator = "none"
reportUnnecessaryIsInstance = "none"
reportUnnecessaryComparison = "none"
reportConstantRedefinition = "none"
reportUnknownLambdaType = "none"
reportPrivateUsage = "none"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = [
    "sae_dashboard/__init__.py:__version__",
    "pyproject.toml:version",
]
branch = "main"
build_command = "pip install poetry && poetry build"
